Fixed text overflow in tablet mode

--- a/css/style.css
+++ b/css/style.css
@@ -308,7 +308,7 @@ body {
     
   }
 
-  @media (min-width: 768px) and (max-width: 1024px) {
+  @media (min-width: 768px) and (max-width: 1103px) {
     
     .texts{
       margin-left: 20px;
